[package]
name = "btc-tx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btc-tx"
path = "src/main.rs"

[dependencies]
bitcoin = { version = "0.32", features = ["serde", "rand"] }
rand = "0.8"
bitcoin_hashes = "0.14"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
